--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-django == "^3.2.23"
-psycopg2 == "^2.9.7"
-pymongo == "^4.5.0"
-django-environ == "^0.11.2"
-pillow == "^10.1.0"
-gunicorn == "^21.2.0"
+django==3.2.23
+psycopg2==^2.9.7
+pymongo==^4.5.0
+django-environ==^0.11.2
+pillow==^10.1.0
+gunicorn==^21.2.0
